--- a/src/component/Support/support.css
+++ b/src/component/Support/support.css
@@ -2,6 +2,8 @@
     margin-top: 32px;
     display: flex;
     gap: 32px;
+    width: 100%;
+    background-color: red;
 }
 .support-div-wrapper {
     display: flex;
