--- a/src/component/Airtime/airtime.css
+++ b/src/component/Airtime/airtime.css
@@ -65,11 +65,15 @@ margin-bottom: 32px;
  
   }
 
+  .airtime-form h4 {
+    font-size: 20px;
+  }
+
   .airtime-form-container {
     display: flex;
     flex-direction: column;
-    margin-top: 32px;
-    /* padding: 32px; */
+    /* margin-top: 32px; */
+    padding: 16px;
     border: 1px solid #D7E1F4;
     border-radius: 12px;
     background: #F7F9FD;
@@ -89,7 +93,9 @@ margin-bottom: 32px;
   .form-group {
     display: flex;
     flex-direction: column;
- 
+ /* background-color: red; */
+ margin-top: 0px;
+ height: 3rem;
     width: 100%;
    
   }
@@ -109,7 +115,7 @@ color: #6882B6;
     display: flex;
     flex-direction: column;
     /* margin-bottom: 15px; */
-    width: 50%;
+    width: 40%;
   }
 
  
@@ -137,6 +143,14 @@ text-align: left;
   .form-group input[type="number"] {
     width: 100%;
   }
+
+  .form-group input:focus,
+.form-group select:focus {
+  border-color: #4169E1;   
+  outline: none;  
+  box-shadow: 0 0 0 3px rgba(65, 105, 225, 0.2);    
+}
+
   
   .proceed-btn {
     padding: 10px;
@@ -145,6 +159,7 @@ text-align: left;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-top: 2rem;
     font-weight: bold;
   }
   
