--- a/src/component/Dashbboard/dashbboard.css
+++ b/src/component/Dashbboard/dashbboard.css
@@ -24,11 +24,14 @@
     flex-grow: 1;
 display: flex;
 flex-direction: column;
+color:#2B3B5A;
 /* gap: 20px; */
  
   
   }
-
+.welcome-container h3 {
+    color: #2B3B5A;
+}
   .welcome-wrapper {
     display: flex;
     flex-direction: row;
@@ -286,8 +289,8 @@ line-height: 28px;
 }
 
 .referal-icon-div img {
-    height: 19.2px;
-    width: 19.2px;
+    height: 15.2px;
+    width: 15.2px;
     object-fit: cover;
 }
 
@@ -374,24 +377,26 @@ line-height: 28px;
     top: 53px;
     /* padding-left: 46px; */
 }    
-.cards {
+.card {
     margin-bottom: 23px;
-    /* background-color: red; */
+    
 }
-.cards-desc {
+.card-desc {
     font-family: Poppins;
 font-size: 24px;
 font-weight: 600;
 line-height: 33.6px;
 letter-spacing: 0.02em;
 text-align: left;
-color:#6882B6;
+color: #6882B6;
 position: inherit;
 top: 80px;
 width: 162px;
 height: 68px;
 
 }
+
+
  
 @media screen and (min-width: 1200px) {
 .cards-div {
@@ -411,7 +416,7 @@ height: 68px;
     }
     
     .wallet-balance p {
-        font-size: 15px;
+        font-size: 14px;
     }
 
     .cards-details div {
