--- a/src/component/Login/login.css
+++ b/src/component/Login/login.css
@@ -19,8 +19,16 @@
     height: 100%;
     border-top-left-radius: 35px;
     /* margin-top: 32px; */
+    margin-left: 3vw;
     height: 80%;
     width: 80%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    overflow-wrap: anywhere;
     
     
 }
