--- a/src/component/Support/support.css
+++ b/src/component/Support/support.css
@@ -4,6 +4,7 @@
     gap: 32px;
     width: 100%;
     background-color: purple;
+
  
 }
 .support-div-wrapper {
@@ -83,4 +84,13 @@ text-align: left;
 color:#6882B6;
 font-weight: 600;
 
+}
+
+@media screen and (min-width: 1200px){
+   .support-containerr {
+
+    width: 90%;
+    background-color: #4169E1;
+   }
+    
 }
