--- a/src/component/Dashboard/dashboard.css
+++ b/src/component/Dashboard/dashboard.css
@@ -14,14 +14,7 @@
  
 }
 
-/* .welcome-container {
-    padding: 32px;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-
-} */
-
+ 
 .welcome-wrapper {
  
  margin-top: 16px;
@@ -178,7 +171,7 @@ border-radius: 100px;
     width: 50%;
 }
 
-.form-container-div {
+.form-containerr-div {
     
     height:  381px;
     padding: 24px 0px 0px 0px;
@@ -186,7 +179,7 @@ border-radius: 100px;
     border-radius: 24px 0px 0px 0px;
     border: 1px 0px 0px 0px;
     opacity: 0px;
-    
+    background-color: red;
     border: 1px solid rgba(215, 225, 244, 1)
 }
 
