--- a/src/Pages/Login/login.css
+++ b/src/Pages/Login/login.css
@@ -1,8 +1,16 @@
+
+
 .login-sidebar-div {
     width: 30vw;
     background: linear-gradient(360deg, #000080 10.16%, rgba(65, 105, 225, 0) 94.07%);
-    height: 100vh;
+  min-height: 100vh;
     padding-left: 5vw;
+}
+
+.sectionimg {
+  height: 100vh;
+  width: 25vw;
+  object-fit: cover;
 }
 
 .sidebarr {
