--- a/src/Pages/Airtime/airtime.css
+++ b/src/Pages/Airtime/airtime.css
@@ -144,6 +144,13 @@ text-align: left;
     width: 100%;
   }
 
+
+  input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+ 
   .form-group input:focus,
 .form-group select:focus {
   border-color: #4169E1;   
